Correct spacing and placement of TOP_HOOK modules.

--- a/css/global.less
+++ b/css/global.less
@@ -25,12 +25,12 @@ body > header {
 	.modules {
 		position: relative;
 		.column(9);
+		margin-top: 10px;
 	}
 
 		.block {
 			float: right;
 			margin-left: 10px;
-			padding-top: 5px;
 		}
 
 }
