--- a/css/modules/blocksearch/blocksearch.less
+++ b/css/modules/blocksearch/blocksearch.less
@@ -5,7 +5,7 @@
 // =|= Block Search Header styles ============================================
 .blocksearch-top {
 	position: absolute;
-	top: 40px;
+	top: 30px;
 	left: 0;
 	width: 100%;
 
