--- a/css/modules/blockuserinfo/blockuserinfo.less
+++ b/css/modules/blockuserinfo/blockuserinfo.less
@@ -5,7 +5,7 @@
 // =|= Block User Info styles ================================================
 .blockuserinfo{
 	position: absolute;
-	top: 10px;
+	top: 0;
 	left: 0;
 	margin: 0;
 
@@ -17,7 +17,7 @@
 
 .blockuserinfo-cart{
 	position: absolute;
-	top: 40px;
+	top: 30px;
 	right: 0;
 	.font-size(13);
 	width: 185px;
